logs/sam3d_5239440.err
  File "/dss/dsshome1/0D/ru47tac2/projects/segrap2025/SAM-Med3D/train.py", line 527
    if not torch.isnan(dice)
                            ^
SyntaxError: expected ':'
